static/styles/styles.css
/* ... */
.turn-active .grid__cell:hover {
  transition: ease-out 0.5s;
  filter: brightness(0.75);
}

.grid__cell--current {
  border: 4px solid #56ff00;
}

.grid__cell--opponent-current {
  border: 4px solid #FF0054;
}

.grid__cell--active {
  animation-duration: 1.5s;
  animation-name: pulseGreen;
  animation-iteration-count: infinite;
}

.grid__cell--opponent-active {
  animation-duration: 1.5s;
  animation-name: pulseRed;
  animation-iteration-count: infinite;
}

.grid__cell--reachable {
  opacity: 0.8;
}

.grid__cell--dug {
  background: linear-gradient(to bottom right, #b98b0e, #6d5207);
}
.grid__cell--dug:hover {
  filter: brightness(1);
}

.grid__cell--treasure {
  background: linear-gradient(to bottom right, #ffff15, #fffdcf);
}
.grid__cell--treasure:hover {
  filter: brightness(1);
}

.grid__special-item {
  text-align: center;
  top: 50%;
  left: 50%;
  position: absolute;
  transform: translate(-50%, -50%);
  color: #000000;
  pointer-events: none;
  font-weight: 600;
}

.grid__treasure-dimension {
  filter: brightness(1.2);
}

@media (max-width: 56.25em) {
  .grid {
    width: 100%;
    margin-bottom: 20px;
  }

  .grid__cell {
    width: calc((100vw - (3.2rem * 2)) / 10);
    height: calc((100vw - (3.2rem * 2)) / 10);
  }
}
@media (max-width: 37.5em) {
  .grid {
    width: 100%;
  }

  .grid__cell {
    width: calc((100vw - (2rem * 2)) / 10);
    height: calc((100vw - (2rem * 2)) / 10);
  }
}
.splash-msg {
  position: absolute;
  pointer-events: none;
  top: 50%;
  transform: translateY(-50%);
  width: 100%;
  text-align: center;
  font-family: "Pirata One", cursive;
  z-index: 2;
}

.splash-msg__text {
  display: none;
  font-size: 5.1rem;
  line-height: 1.3;
  color: #071E22;
  margin: 0 24px;
  text-shadow: 5px 3px #ffffff;
}
.splash-msg__text--cold {
  color: #0c0cb7;
}
.splash-msg__text--warm {
  color: #ffb326;
}
.splash-msg__text--hot {
  color: #f12d1f;
}

.two-columns__main {
  float: right;
  width: 68%;
}

.two-columns__sidebar {
  float: left;
  width: calc(32% - 20px);
  margin-right: 20px;
}

@media (max-width: 56.25em) {
  .two-columns__sidebar,
.two-columns__main {
    width: 100%;
  }
}
.sidebar {
  height: 500px;
}

.sidebar__tab {
  display: none;
  position: relative;
  background-color: #071E22;
  overflow: auto;
  height: calc(100% - 48px);
}

.sidebar__tab--active {
  display: block;
}

.sidebar__body {
  padding: 20px 25px;
  height: 100%;
  overflow: auto;
}

.sidebar__body--chat {
  height: calc(100% - 48px);
}

.sidebar:not(:last-child) {
  margin-bottom: 20px;
}

.sidebar__button--unread::after {
  content: " ";
  position: absolute;
  top: 10px;
  right: 10px;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  background-color: #56ff00;
}

.sidebar__button--active {
  opacity: 1;
}

.sidebar__text--history {
  opacity: 0.6;
}

.sidebar__chatbox {
  height: 48px;
  color: #ffffff;
}

.sidebar__chat-input {
  float: left;
  width: calc(100% - 57px);
  height: 100%;
  padding: 0 25px;
  background-color: #0B1A1D;
  border: none;
  color: #ffffff;
}

.sidebar__chatbox .button--chat {
  float: right;
  width: 57px;
  height: 100%;
}

.sidebar__chat-message {
  margin-bottom: 10px;
}

.sidebar__chat-name {
  font-family: "Pirata One", cursive;
  text-transform: uppercase;
}

@media (max-width: 56.25em) {
  .sidebar {
    height: 300px;
  }
}
.turn-choice {
  border: none;
}

.turn-choice__btn {
  float: left;
  font-family: inherit;
  font-size: 20px;
  height: 92px;
  width: calc(50% - 1px);
  padding: 10px 14px;
  border: none;
  background-color: #ffbc00;
}

.turn-choice__btn--item {
  float: none;
  height: 45px;
  width: 100%;
  margin-top: 2px;
}

.turn-choice__btn:first-child {
  margin-right: 2px;
}

.turn-choice__btn:hover {
  cursor: pointer;
}

.turn-choice__btn:disabled,
.turn-choice:disabled .turn-choice__btn {
  opacity: 0.25;
  color: #000000;
}

.turn-choice:disabled .turn-choice__btn:hover {
  cursor: default;
}

@media (max-width: 37.5em) {
  .turn-choice__btn {
    height: 60px;
  }
}
.action-box {
  position: relative;
  width: 500px;
  font-family: "Pirata One", cursive;
}

.action-box__msg-box {
  float: left;
  position: relative;
  height: 100%;
  width: 38%;
  padding: 20px 25px;
  margin-bottom: 20px;
  background-color: #071E22;
  min-height: 140px;
}

.action-box__msg-box--buttons {
  padding: 0;
  width: 24%;
  background-color: transparent;
}

.action-box__msg-box--roll {
  text-align: center;
}

.action-box__die {
  margin-top: 8px;
}

@media (max-width: 37.5em) {
  .action-box {
    width: 100%;
  }

  .action-box__msg-box {
    width: 100%;
    min-height: auto;
    margin-bottom: 10px;
  }

  .action-box__msg-box:not(:last-child) {
    margin-right: 0;
  }

  .action-box__msg-box--roll {
    min-height: 124px;
  }
}
.modal {
  display: none;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: #071E22;
  width: 960px;
  max-width: 90%;
  height: 400px;
  max-height: 90%;
  z-index: 100;
}

.modal--rules {
  height: auto;
  overflow: hidden;
}

.modal--small {
  width: auto;
  height: auto;
}

.body--modal-open .modal--active,
.body--modal-open .modal__overlay {
  display: block;
}

.body--modal-open .js-open-rules-modal-btn {
  display: none;
}

body.body--modal-open {
  overflow: hidden;
}

.modal__inner {
  padding: 30px 50px;
  padding-right: 87px;
}

.modal__inner--slider {
  padding: 0;
}

.modal__heading {
  margin-bottom: 20px;
}

.modal__overlay {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 50;
  background: rgba(0, 0, 0, 0.6);
}

.modal__close-btn {
  position: absolute;
  cursor: pointer;
  top: 30px;
  right: 30px;
  padding: 0;
  background-color: transparent;
  border: none;
  background-color: rgba(0, 0, 0, 0.6);
  padding: 10px;
  z-index: 1;
}

.modal__close-btn svg {
  display: block;
  fill: #ffbc00;
  width: 25px;
  height: 25px;
}
/* ... */

